@@ -1,4 +1,5 @@
 0.25
+Added a new osmosis-extract-mysql application for extracting regular changesets from mysql.
 
 0.24
 Fixed a bug in the XML node writing code where it would write a ',' character instead of '.' as the decimal separator in some locales.
